--- a/angular-src/src/main/web/src/app/navigation/navigation.component.html
+++ b/angular-src/src/main/web/src/app/navigation/navigation.component.html
@@ -3,12 +3,12 @@
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="!(isHandset$ | async)">
-    <mat-toolbar>Menu</mat-toolbar>
+    <mat-toolbar>{{ 'MENU.TITLE' | translate }}</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/welcome">Welcome</a>
-      <a mat-list-item routerLink="/graph-1">Graph</a>
-      <a mat-list-item routerLink="/graph-2">Result Graph</a>
-      <a mat-list-item routerLink="/statistic">Statistic</a>
+      <a mat-list-item routerLink="/welcome">{{ 'MENU.WELCOME_TITLE' | translate }}</a>
+      <a mat-list-item routerLink="/graph-1">{{ 'MENU.GRAPH_TITLE' | translate }}</a>
+      <a mat-list-item routerLink="/graph-2">{{ 'MENU.RESULT_GRAPH_TITLE' | translate }}</a>
+      <a mat-list-item routerLink="/statistic">{{ 'MENU.STATISTIC_TITLE' | translate }}</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
