--- a/angular-src/src/main/web/src/app/ws-zprime-line/ws-zprime-line.component.html
+++ b/angular-src/src/main/web/src/app/ws-zprime-line/ws-zprime-line.component.html
@@ -1,14 +1,14 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title>Request line</mat-card-title>
-    <mat-card-subtitle>Send request to calculate and render new line</mat-card-subtitle>
+    <mat-card-title>{{ 'CONTROLS.LINE.TITLE' | translate }}</mat-card-title>
+    <mat-card-subtitle>{{ 'CONTROLS.LINE.SUBTITLE' | translate }}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <form #form [formGroup]="requestData" novalidate>
       <div class="row">
         <div class="col">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Ksi" formControlName="ksi">
+            <input matInput placeholder="{{ 'CONTROLS.LINE.KSI_TITLE' | translate }}" formControlName="ksi">
             <mat-error *ngIf="requestData.controls['ksi'].hasError('required')">
               Ksi is <strong>required</strong>
             </mat-error>
@@ -26,21 +26,21 @@
       <div class="row">
         <div class="col">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Count of modulated collision events" formControlName="events">
+            <input matInput placeholder="{{ 'CONTROLS.LINE.EVENTS_COUNT_TITLE' | translate }}" formControlName="events">
             <mat-error *ngIf="requestData.controls['events'].hasError('required')">
-              Ksi is <strong>required</strong>
+              Events is <strong>required</strong>
             </mat-error>
             <mat-error *ngIf="requestData.controls['events'].hasError('isNotDouble')">
-              Ksi should be <strong>a double</strong>
+              Events field should be <strong>a double</strong>
             </mat-error>
           </mat-form-field>
           <mat-form-field class="full-width">
-            <input matInput placeholder="Count of recalculation a point with random seed" formControlName="cycles">
+            <input matInput placeholder="{{ 'CONTROLS.LINE.CYCLES_TITLE' | translate }}" formControlName="cycles">
             <mat-error *ngIf="requestData.controls['cycles'].hasError('required')">
-              Ksi is <strong>required</strong>
+              Cycles is <strong>required</strong>
             </mat-error>
             <mat-error *ngIf="requestData.controls['cycles'].hasError('isNotDouble')">
-              Ksi should be <strong>a double</strong>
+              Cycles field should be <strong>a double</strong>
             </mat-error>
           </mat-form-field>
         </div>
