zprime result observerd

--- a/angular-src/src/main/web/src/app/navigation/navigation.component.html
+++ b/angular-src/src/main/web/src/app/navigation/navigation.component.html
@@ -22,7 +22,7 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <!-- TODO: get name of site from properties -->
-      <span>{{ 'HOME.TITLE' | translate }}</span>
+      <span>{{ 'MENU.HEAD_TITLE' | translate }}</span>
       <span class="spacer"></span>
       <span>
         <button mat-button [matMenuTriggerFor]="menu">{{translate.currentLang}}</button>
