--- a/angular-src/src/main/web/src/app/ws-zprime-line/ws-zprime-line.component.css
+++ b/angular-src/src/main/web/src/app/ws-zprime-line/ws-zprime-line.component.css
@@ -8,3 +8,9 @@
 .row-line {
     margin-bottom: 10px;
 }
+
+.remove-button {
+    margin-top: 7px;
+    background: transparent;
+    border: 0ch;
+}
