--- a/angular-src/src/main/web/src/app/ws-zprime-point/ws-zprime-point.component.html
+++ b/angular-src/src/main/web/src/app/ws-zprime-point/ws-zprime-point.component.html
@@ -30,7 +30,7 @@
           </div>
         <div class="col">
           <mat-card-actions>
-            <button mat-raised-button color="primary" type="submit" [disabled]="!requestData.valid">Submit</button>
+            <button mat-raised-button color="primary" type="submit" [disabled]="!requestData.valid">{{ 'CONTROLS.SUBMIT_TITLE' | translate }}</button>
           </mat-card-actions>
         </div>
       </div>
