zprime ui update

--- a/angular-src/src/main/web/src/app/welcome/welcome.component.html
+++ b/angular-src/src/main/web/src/app/welcome/welcome.component.html
@@ -1,6 +1,7 @@
 <div class="grid-container">
   <h1 class="mat-h1">{{ 'WELCOME.CHAPTER' | translate }}</h1>
   <div>
+    <img src="http://www.edu.gstu.by/pluginfile.php/1/theme_essential/slide1image/1557824614/gstu.png">
     {{ 'WELCOME.TEXT' | translate }}
   </div>
 </div>
